--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "wule",
   "type": "module",
   "version": "0.0.1",
+  "homepage": "https://wueliton.github.io/wule-agencia",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "generate:icons": "node utils/generate-icons.js"
+    "generate:icons": "node utils/generate-icons.js",
+    "publish": "gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/react": "^4.2.7",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@iconify-json/solar": "^1.2.2",
-    "@iconify/react": "^6.0.0"
+    "@iconify/react": "^6.0.0",
+    "gh-pages": "^6.3.0"
   }
 }
