feat: added google recaptcha validation

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro-icon": "^1.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.56.3",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.4",
