--- a/api/composer.json
+++ b/api/composer.json
@@ -5,7 +5,8 @@
     "phpmailer/phpmailer": "^6.10",
     "twig/twig": "^3.21",
     "vlucas/phpdotenv": "^5.6",
-    "tuupola/cors-middleware": "^1.5"
+    "tuupola/cors-middleware": "^1.5",
+    "google/recaptcha": "^1.3"
   },
   "autoload": {
     "psr-4": {
